Fixed lots of stuff

--- a/bottlerocket-quickstart-eks.yaml
+++ b/bottlerocket-quickstart-eks.yaml
@@ -3,7 +3,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: bottlerocket-opensearch-beta
+  name: bottlerocket-opensearch
   region: us-east-2
   version: "1.27"
 
