--- a/opensearch-cluster.yaml
+++ b/opensearch-cluster.yaml
@@ -1,11 +1,12 @@
 apiVersion: opensearch.opster.io/v1
 kind: OpenSearchCluster
 metadata:
-  name: opensearch
+  name: opensearch-cluster
   namespace: default
 spec:
   general:
-    serviceName: opensearch
+    serviceName: opensearch-cluster
+    httpPort: 9200
     version: 2.8.0
   dashboards:
     enable: true
@@ -30,9 +31,8 @@ spec:
          limits:
             memory: "2Gi"
             cpu: "500m"
-      persistence:
-        emptyDir: {}
       roles:
         - "cluster_manager"
         - "data"
-        - "ml"
+      persistence:
+        emptyDir: {}
