--- a/fluentbit-daemonset.yaml
+++ b/fluentbit-daemonset.yaml
@@ -104,13 +104,13 @@ metadata:
 apiVersion: fluentbit.fluent.io/v1alpha2
 kind: ClusterOutput
 metadata:
-  name: es
+  name: opensearch
   labels:
     fluentbit.fluent.io/enabled: "true"
     fluentbit.fluent.io/mode: "fluentbit-only"
 spec:
   matchRegex: (?:kube|service)\.(.*)
-  es:
+  opensearch:
     host: opensearch-nodes
     port: 9200
     generateID: true
